modify view more btns, case study intro layout and spacing, and fix case study boses on homepage

--- a/css/style.css
+++ b/css/style.css
@@ -549,7 +549,7 @@ nav a:after {
   bottom: 0;
   left: 1.85em;
   width: 0%;
-  border-bottom: 10px solid #98D4D4;
+  border-bottom: 10px solid rgba(104, 196, 216, 0.6);
   transition: 0.2s;
   z-index: auto;
 }
@@ -578,7 +578,7 @@ a {
     font-weight: 900;
     letter-spacing: .02em;
     font-size: 20px;
-    padding: 15px 120px;
+    padding: 15px 50px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -589,10 +589,28 @@ a {
 .view-more-btn {
     text-decoration: none;
     color: #2e2e2e;
-    background: #98D4D4;
-    padding: 10px 0 0 20px;
-    margin-right: auto;
+    background: linear-gradient(90deg, rgba(4, 156, 190, 0.36) 0%, rgba(255, 255, 255, 0) 40%), rgba(4, 156, 190, 0.4);
+    padding: 10px 0 0 80px;
     display: inline-block;
+    text-align: left;
+    margin-right: auto;
+}
+
+.view-more-txt {
+    display: block;
+    position: relative;
+    top: 0.5em;
+    margin-right: -1em;
+}
+
+.view-more-btn:hover {
+    background: linear-gradient(90deg, rgba(4, 156, 190, 0.36) 0%, rgba(255, 255, 255, 0) 87.85%), rgba(4, 156, 190, 0.6);
+    padding-top: 15px;
+}
+
+.view-more-btn:hover .view-more-txt {
+    top: -.25em;
+    margin-right: 1em;
 }
 
 .case-study-btn {
@@ -603,7 +621,7 @@ a {
     border: 2px solid #2e2e2e;
     background-color; rgba(255,255,255,0.1);
     color: #2e2e2e;
-    padding: 15px 120px;
+    padding: 15px 50px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -689,7 +707,7 @@ nav {
 
 .fa-plus {
     padding-right: 1em;
-    color: #98D4D4;
+    color: rgba(104, 196, 216, 0.6);
 }
 
 .feature-bar {
@@ -723,11 +741,18 @@ nav {
 #work .case-study-box {
     background-image:url(../images/beginwell-image1x-compressed.png);
     background-repeat: no-repeat;
-    height: 100%;
+    background-size: cover;
     padding-top: 2em;
     padding-bottom: 2em;
-    min-width: 650px;
 }
+
+#work #keepsy {
+    background-image:url(../images/keepsy-image1x-compressed.png);
+    margin-top: 2em;
+    padding-right: 0px;
+    margin-right: 0px;
+}
+
 
 .box-content {
     background-color: rgba(255,255,255, 0.6);
@@ -737,6 +762,11 @@ nav {
     padding-top: 2em;
     padding-bottom: 2em;
     position: relative;
+    padding-right: 1em;
+}
+
+#work #keepsy .box-content {
+    margin-left: 2em;
 }
 
 .box-content .tagline {
@@ -758,18 +788,6 @@ nav {
     margin-top: 1em;
     margin-bottom: .25em;
     margin-left: -4px;
-}
-
-
-#work > #keepsy {
-    background-image:url(../images/keepsy-image1x-compressed.png);
-    margin-top: 2em;
-    padding-right: 0px;
-    margin-right: 0px;
-}
-
-#work > #keepsy .box-content {
-    margin-left: 2em;
 }
 
 /*About page*/
@@ -1186,13 +1204,8 @@ footer .p-copyright {
 }
 
 #user-flow-support-content {
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
+    display: block;
     margin-top: 2em;
-}
-
-#user-flow-right {
-    grid-column-start: 1;
 }
 
 #pen-and-paper-support-content {
@@ -1346,6 +1359,11 @@ footer .p-copyright {
     margin-bottom: 0.5em;
 }
 
+#other-work-content a {
+    margin-top: 1.5em;
+}
+
+
 .case-study footer {
     margin-top: -3.5em;
     padding-top: 4em;
@@ -1373,6 +1391,12 @@ footer h6, footer h3, footer p {
   #persona p {
       margin-top: 12em;
   }
+}
+
+@media (min-width: 650px){
+  .case-study-box {
+        min-width: 650px;
+    }
 }
 
 @media (min-width: 768px) {
@@ -1504,19 +1528,19 @@ footer h6, footer h3, footer p {
 
   .intro-content {
       padding-top: 4em;
-      padding-left: 2em;
       padding-right: 2em;
       display: grid;
-      grid-template-columns: repeat(6, 1fr);
+      grid-template-columns: repeat(4, 1fr);
       grid-template-rows: repeat(2, 1fr);
       grid-column-gap: 8em;
+      margin-left: 8em;
   }
 
   .intro-content p {
       margin-top: 0px;
       padding-top: .5em;
-      margin-left: -8em;
-      margin-right: -4em;
+      margin-left: -10em;
+      padding-right: 6em;
   }
 
   .intro-content span {
@@ -1531,12 +1555,16 @@ footer h6, footer h3, footer p {
       grid-row-start: 2;
   }
 
+p.intro-bottom.intro-right {
+      padding-right: 8em;
+  }
+
   .intro-left {
-      grid-column-start: 3;
+      grid-column-start: 2;
   }
 
   .intro-right {
-      grid-column-start: 5;
+      grid-column-start: 4;
   }
 
   .span-top {
@@ -1548,11 +1576,11 @@ footer h6, footer h3, footer p {
   }
 
   .span-left {
-      grid-column-start: 2;
+      grid-column-start: 1;
   }
 
   .span-right {
-      grid-column-start: 4;
+      grid-column-start: 3;
   }
 
   .highlight-bar {
@@ -1614,6 +1642,12 @@ footer h6, footer h3, footer p {
       margin-right: -4em;
   }
 
+  #user-flow-support-content {
+      display: grid;
+      grid-template-columns: repeat(6, 1fr);
+  }
+
+
   #user-flow-right {
       grid-column-start: 4;
       margin-left: -14em;
@@ -1659,43 +1693,29 @@ footer h6, footer h3, footer p {
 }
 
 @media (min-width: 1440px) {
+
   #work {
-      background-image:url(../images/work-background-topography.png);
-      height: 100%;
-      display: flex;
-      flex-flow: row;
-      padding-bottom: 6em;
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      grid-column-gap: 4em;
       padding-top: 0;
+  }
+
+  #work #keepsy {
+      grid-column-start: 2;
+      grid-row-start: 1;
+      margin-top: 30%;
 
   }
 
-  #work .case-study-box {
-      background-image:url(../images/beginwell-image1x-compressed.png);
-      background-repeat: no-repeat;
-      width: 100%;
-      height: 100%;
-      padding-top: 2em;
-      padding-bottom: 2em;
-      margin-right: 2em;
+  #work .box-content {
+      margin-left: 0
   }
 
-  .box-content {
-      background-color: rgba(255,255,255, 0.6);
-      margin-right: 2em;
-      margin-left: 0;
-      padding-left: 10%;
-      padding-top: 2em;
-      padding-bottom: 2em;
-      position: relative;
-  }
-
-  #work > #keepsy {
-      margin-top: 15%;
-  }
-
-  #work > #keepsy .box-content {
+  #work #keepsy .box-content {
       margin-right: 0;
   }
+
 
   /*Case Study*/
 
